[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/slot.gd" type="Script" id=1]
[ext_resource path="res://sprites/CactusPhase01.png" type="Texture" id=2]
[ext_resource path="res://sprites/CactusPhase02.png" type="Texture" id=3]
[ext_resource path="res://sprites/CactusPhase03.png" type="Texture" id=4]
[ext_resource path="res://sprites/CactusPhase04.png" type="Texture" id=5]
[ext_resource path="res://sprites/CactusPhase05.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 40, 50 )

[node name="Slot" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 40, 50 )
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="Sprites" type="Node2D" parent="."]
editor/display_folded = true

[node name="CactusPhase01" type="Sprite" parent="Sprites"]
visible = false
position = Vector2( 36.7763, 72.3987 )
scale = Vector2( 0.27, 0.27 )
texture = ExtResource( 2 )

[node name="CactusPhase02" type="Sprite" parent="Sprites"]
visible = false
position = Vector2( 37.0537, 65.1866 )
scale = Vector2( 0.27, 0.27 )
texture = ExtResource( 3 )

[node name="CactusPhase03" type="Sprite" parent="Sprites"]
visible = false
position = Vector2( 37.6084, 54.3684 )
scale = Vector2( 0.27, 0.27 )
texture = ExtResource( 4 )

[node name="CactusPhase04" type="Sprite" parent="Sprites"]
visible = false
position = Vector2( 28.4546, 54.3684 )
scale = Vector2( 0.27, 0.27 )
texture = ExtResource( 5 )

[node name="CactusPhase05" type="Sprite" parent="Sprites"]
visible = false
position = Vector2( 39.6478, 52.5161 )
scale = Vector2( 0.27, 0.27 )
texture = ExtResource( 6 )

[node name="Timers" type="Node" parent="."]

[node name="GrowUp" type="Timer" parent="Timers"]
wait_time = 10.0
one_shot = true

[connection signal="mouse_entered" from="." to="." method="_on_Slot_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Slot_mouse_exited"]
[connection signal="timeout" from="Timers/GrowUp" to="." method="_on_GrowUp_timeout"]
